exports[`<SummaryCard /> render testing matches snapshot 1`] = `
<div
  className="card-wrapper">
  <a
    className="card-focus has-shadow card-container center-block  "
    href="/app/12345"
    id="appCard12345"
    onClick={[Function anonymous]}>
    <div
      className="">
      <div
        className="card-badge">
        <img
          alt="Endorsed app"
          src="../../images/fn_badge.svg" />
      </div>
      <div
        className="card-logo">
        <img
          alt="app name Logo"
          src="../../images/app-icon.png" />
      </div>
      <section
        className="card-info">
        <div
          className="card-name">
          app name
        </div>
        <div
          className="card-publisher">
          publisher name
        </div>
      </section>
      <div
        className="card-lower-meta">
        <div
          className="card-rating">
          <div
            className="ratings-container">
            <span>
              No Reviews
            </span>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<SummaryCard /> render testing matches snapshot 2`] = `
<div
  className="card-wrapper">
  <a
    className="card-focus has-shadow card-container center-block  "
    href="/app/12345"
    id="appCard12345"
    onClick={[Function anonymous]}>
    <div
      className="">
      <div
        className="card-logo">
        <img
          alt="app name Logo"
          src="../../images/app-icon.png" />
      </div>
      <section
        className="card-info">
        <div
          className="card-name">
          app name
        </div>
        <div
          className="card-publisher">
          publisher name
        </div>
      </section>
      <div
        className="card-lower-meta">
        <div
          className="card-rating">
          <div
            className="ratings-container">
            <span>
              No Reviews
            </span>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;
